[metadata]
name = hsp
version = 0.0.2
description = python+trio implementation of HSP
long_description = https://github.com/joernheissler/hsp-python/
author = Jörn Heissler
keywords =
    hsp
    trio
license = MIT
classifiers =
    Development Status :: 4 - Beta

    License :: OSI Approved :: MIT License

    Intended Audience :: Developers

    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
include_package_data = False
packages = hsp
install_requires =
    attrs
    trio
python_requires = >= 3.5.3

[bdist_wheel]
python-tag = py3
